v8.0.0 - Projects can not be public anymore, it is required to log in to invoke GET /projects and the isPublic property of projects is removed
